# Snake-on-SDL

./: .gitignore  CMakeLists.txt  README.md  SnakeInstaller.smm
idea/: main.py
src/: baseGUI.cpp  baseGUI.hpp  baseHud.cpp  baseHud.hpp  dataCreater.cpp  dataLoader.cpp  dataLoader.hpp  define.hpp  entity.cpp  entity.hpp  include.hpp  init.cpp  init.hpp  initFile.cpp  initFile.hpp  main.cpp  main_old_snake.cpp  pause.cpp  pause.hpp  structs.hpp
